--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "dependencies": {
     "bulma": "^0.8.0",
     "core-js": "^3.6.4",
+    "echarts": "^4.6.0",
     "vue": "^2.6.11",
+    "vue-echarts": "^5.0.0-beta.0",
     "vue-router": "^3.1.5"
   },
   "devDependencies": {
