--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "echarts": "^4.6.0",
     "vue": "^2.6.11",
     "vue-echarts": "^5.0.0-beta.0",
+    "vue-echarts-v3": "^2.0.1",
     "vue-router": "^3.1.5"
   },
   "devDependencies": {
