--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "bulma": "^0.8.0",
     "core-js": "^3.6.4",
     "echarts": "^4.6.0",
+    "fund": "^1.0.0",
     "vue": "^2.6.11",
+    "vue-blu": "^0.1.9",
     "vue-echarts": "^5.0.0-beta.0",
     "vue-echarts-v3": "^2.0.1",
     "vue-router": "^3.1.5"
