--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
   },
   "dependencies": {
     "axios": "^0.19.2",
-    "bootstrap-vue": "^2.9.0",
+    "bootstrap": "^4.6.0",
+    "bootstrap-vue": "^2.21.2",
     "bulma": "^0.8.0",
     "core-js": "^3.6.4",
     "echarts": "^4.6.0",
     "fund": "^1.0.0",
-    "vue": "^2.6.11",
+    "vue": "^2.6.12",
     "vue-blu": "^0.1.9",
     "vue-echarts": "^5.0.0-beta.0",
     "vue-echarts-v3": "^2.0.1",
@@ -33,7 +34,7 @@
     "node-sass": "^4.13.1",
     "sass-loader": "^8.0.2",
     "vue-cli-plugin-element-ui": "~1.1.4",
-    "vue-template-compiler": "^2.6.11",
+    "vue-template-compiler": "^2.6.12",
     "webpack": "^4.42.0",
     "webpack-bundle-analyzer": "^3.6.1"
   }
